@@ -1,14 +1,14 @@
 {
-  "timestamp" : "2022-06-20T01:01:55Z",
+  "timestamp" : "2022-06-20T08:15:59Z",
   "count_outdated" : 344,
   "uniques_outdated" : 185,
   "count" : 373,
-  "uniques" : 201,
+  "uniques" : 202,
   "clones" : [
     {
       "timestamp": "2022-06-06T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 3 ],
+      "count": 1,
+      "count_minmax": [ 1, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 2 ]
     },
@@ -100,6 +100,13 @@
       "timestamp": "2022-06-19T00:00:00Z",
       "count": 2,
       "count_minmax": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-06-20T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
